--- a/bizopt/BO/templates/goods.html
+++ b/bizopt/BO/templates/goods.html
@@ -102,28 +102,29 @@
 
         </ul>
     </div>
-
-    <script>
-        function pricevalidation() {
-            let p1 = parseInt(document.getElementById('from').value)
-            let p2 = parseInt(document.getElementById('to').value)
-            let top = Math.max(p1, p2)
-            let bottom = Math.min(p1, p2)
-            let goods_prices = document.getElementsByClassName('price')
-            for (let i = 0; i < goods_prices.length; ++i) {
-                let str = parseInt(goods_prices[i].innerHTML.split(/(\s+)/)[2])
-                if (top < str || str < bottom) {
-                    goods_prices[i].parentElement.parentElement.parentElement.parentElement.style.cssText =
-                        'display: none';
-                } else {
-                    goods_prices[i].parentElement.parentElement.parentElement.parentElement.style.cssText =
-                        'display: flex';
-                }
-            }
-        }
-    </script>
+    {% include "footer.html" %}
 
 </body>
+
+<script>
+    function pricevalidation() {
+        let p1 = parseInt(document.getElementById('from').value)
+        let p2 = parseInt(document.getElementById('to').value)
+        let top = Math.max(p1, p2)
+        let bottom = Math.min(p1, p2)
+        let goods_prices = document.getElementsByClassName('price')
+        for (let i = 0; i < goods_prices.length; ++i) {
+            let str = parseInt(goods_prices[i].innerHTML.split(/(\s+)/)[2])
+            if (top < str || str < bottom) {
+                goods_prices[i].parentElement.parentElement.parentElement.parentElement.style.cssText =
+                    'display: none';
+            } else {
+                goods_prices[i].parentElement.parentElement.parentElement.parentElement.style.cssText =
+                    'display: flex';
+            }
+        }
+    }
+</script>
 
 <style>
     .textStyleHeader p {
