--- a/bizopt/BO/templates/index.html
+++ b/bizopt/BO/templates/index.html
@@ -158,37 +158,7 @@
 </div>
 
 
-<div class="uk-container uk-width-1 uk-flex uk-flex-around uk-flex-middle"
-    style="color: white; background-color: #0A3644; padding: 5%">
-    <div class="uk-flex-row">
-        <h3 style="color: white">ДЛЯ ПОКУПАТЕЛЕЙ</h3>
-        <ul class="uk-nav uk-navbar-dropdown-nav">
-            <li style="font-size: 1.5em"><a calss="uk-button uk-button-link">Pricing</a></li>
-            <li style="font-size: 1.5em"><a calss="uk-button uk-button-link">Settings</a></li>
-            <li style="font-size: 1.5em"><a calss="uk-button uk-button-link">Orders</a></li>
-            <li style="font-size: 1.5em"><a calss="uk-button uk-button-link">Help</a></li>
-        </ul>
-    </div>
-    <div class="uk-flex-row">
-        <h3 style="color: white">ДЛЯ ПАРТНЕРОВ</h3>
-        <ul class="uk-nav uk-navbar-dropdown-nav">
-            <li style="font-size: 1.5em"><a calss="uk-button uk-button-link">Pricing</a></li>
-            <li style="font-size: 1.5em"><a calss="uk-button uk-button-link">Settings</a></li>
-            <li style="font-size: 1.5em"><a calss="uk-button uk-button-link">Orders</a></li>
-            <li style="font-size: 1.5em"><a calss="uk-button uk-button-link">Help</a></li>
-        </ul>
-    </div>
-    <div class="uk-flex-row">
-        <h3 style="color: white">КОНТАКТЫ:</h3>
-        <ul class="uk-nav uk-navbar-dropdown-nav">
-            <li style="font-size: 1.5em"><a calss="uk-button uk-button-link">Россия, г. Москва</a></li>
-            <li style="font-size: 1.5em"><a calss="uk-button uk-button-link"
-                    href="email:degtyarevea12@gmail.com">degtyarevea12@gmail.com</a></li>
-            <li style="font-size: 1.5em"><a calss="uk-button uk-button-link" href="tel:+7 (925) 574 13-71">+7 (925) 574
-                    13-71</a></li>
-            <li style="font-size: 1.5em"><a calss="uk-button uk-button-link" href="">+7 (925) 574 13-71</a></li>
-        </ul>
-    </div>
-</div>
+{% include "footer.html" %}
+
 
 {% endblock %}
