--- a/bizopt/BO/templates/orders.html
+++ b/bizopt/BO/templates/orders.html
@@ -16,7 +16,7 @@
                 <div class="uk-flex uk-flex-between uk-flex-middle uk-with-1"
                     style="padding: 1%; margin: 2% auto; border-bottom: 1px solid;">
                     <div class="uk-flex uk-flex-around uk-flex-middle uk-width-3-5">
-                        <div><img src="../../media/{{product.img}}" alt="" width="200px" style="border-radius: 5px">
+                        <div><img src="{{product.img}}" alt="" width="200px" style="border-radius: 5px">
                         </div>
                         <div class="uk-flex-row">
                             <h2 class="uk-text-break">{{ product.id_user_buy }}</h2>
