--- a/bizopt/BO/templates/cardProduct.html
+++ b/bizopt/BO/templates/cardProduct.html
@@ -18,10 +18,10 @@
             <!--  -->
             <div class="uk-flex">
                 <div class="uk-width-auto uk-display-inline uk-margin-small-right">
-                    <img src="{{image_user_product}}" class="uk-border-circle" style="width: 60px; height: 60px">
+                    <img src="{{shop.logoImage}}" class="uk-border-circle" style="width: 60px; height: 60px">
                 </div>
                 <div class="uk-width-expand uk-display-inline">
-                    <h3 class="uk-card-title uk-margin-remove-bottom ">{{product.id_creator}}
+                    <h3 class="uk-card-title uk-margin-remove-bottom ">{{shop.name}}
                     </h3>
                     <div><span>&#9733</span><span>&#9733</span><span>&#9733</span><span>&#9733</span><span>&#9734</span>
                     </div>
@@ -54,7 +54,7 @@
             <!--  -->
             <div>
                 {% if request.user.is_authenticated %}
-                <button class="uk-button uk-button-default uk-border-pill uk-width-auto uk-margin-small-bottom"
+                <button class="uk-button uk-button-default uk-border-pill uk-width-1-2 uk-margin-small-bottom"
                     href="#modal-overflow" style="background-color: rgb(163, 163, 163);" uk-toggle>Заказать</button>
                 {% else %}
                 <a style="color: black;" class="uk-button uk-border-pill uk-width-auto uk-margin-small-bottom"
@@ -106,10 +106,6 @@
 
                     </div>
                 </div>
-                <button style="color: black; background-color:darkgray"
-                    class="uk-button uk-button-default uk-border-pill uk-width-auto uk-margin-small-bottom">Показать
-                    контакты
-                    продавца</button>
             </div>
             <div class="uk-margin-medium-top uk-width-1">
                 <h3 class="uk-width-1">Размеры:</h3>
@@ -136,80 +132,25 @@
             <!--  -->
             <div>
                 <h2>Харрактиристики</h2>
-                <div class="d-flex uk-felx-around uk-text-left uk-flex-wrap-top">
-                    <div class="uk-width-1-3" style="margin: 5px 25px">
+                <div class="uk-grid uk-text-left ul-width-4-5" style="margin: 0 auto" uk-grid>
+                    <div class="uk-width-1-4" style="padding: 0;">
                         <h4>Тип</h4>
-
-                        <!-- <p>{{product.tags}}</p> -->
-                        <p>Не указан</p>
+                        <p>{{product.category}}</p>
                     </div>
-                    <div class="uk-width-1-3" style="margin: 5px 25px">
+                    <div class="uk-width-1-4" style="padding: 0;">
+                        <h4>Количество</h4>
+                        <p id="amount"></p>
+                    </div>
+                    <div class="uk-width-1-4" style="padding: 0;">
                         <h4>Бренд</h4>
                         <p> {{product.brand}} </p>
                     </div>
-                    <div class="uk-width-1-3" style="margin: 5px 25px">
+                    <div class="uk-width-1-4" style="padding: 0;">
                         <h4>Страна Производитель</h4>
                         <p>{{product.country}}</p>
                     </div>
                 </div>
 
-                <!-- <div class="d-flex uk-felx-around uk-text-left uk-flex-wrap-top">
-                    <div class="uk-width-1-3" style="margin: 5px 25px">
-                        <h4>Комплект товара</h4>
-                            {% for sets in product.set %}
-                            <div class="uk-width-1-3 uk-text-left" style="display: inline-block;">
-                                <p style="margin: 2px; padding: 0; border-bottom: 1px solid;" class="uk-text-truncate" uk-tooltip="{{sets}}">{{sets}}</p>
-                            </div>
-                            {% endfor %}
-
-                    </div>
-                    <div class="uk-width-1-3" style="margin: 5px 25px">
-                        <h4>Размер товара</h4>
-                        <div class="uk-grid-small" uk-grid>
-                            <div class="uk-width-expand" uk-leader="fill:_">Высота</div>
-                            <div>
-                                <p>{{product.width_product}} &nbsp;см</p>
-                            </div>
-                        </div>
-
-                        <div class="uk-grid-small" uk-grid>
-                            <div class="uk-width-expand" uk-leader="fill:_">Длина</div>
-                            <div>
-                                <p>{{product.height_product}} &nbsp;см</p>
-                            </div>
-                        </div>
-
-                        <div class="uk-grid-small" uk-grid>
-                            <div class="uk-width-expand" uk-leader="fill:_">Ширина</div>
-                            <div>
-                                <p>{{product.length_product}} &nbsp;см</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="uk-width-1-3" style="margin: 5px 25px">
-                        <h4>Размер упаковки</h4>
-                        <div class="uk-grid-small" uk-grid>
-                            <div class="uk-width-expand" uk-leader="fill:_">Высота</div>
-                            <div>
-                                <p>{{product.width_packaging}} &nbsp;см</p>
-                            </div>
-                        </div>
-
-                        <div class="uk-grid-small" uk-grid>
-                            <div class="uk-width-expand" uk-leader="fill:_">Длина</div>
-                            <div>
-                                <p>{{product.height_packaging}} &nbsp;см</p>
-                            </div>
-                        </div>
-
-                        <div class="uk-grid-small" uk-grid>
-                            <div class="uk-width-expand" uk-leader="fill:_">Ширина</div>
-                            <div>
-                                <p>{{product.length_packaging}} &nbsp;см</p>
-                            </div>
-                        </div>
-                    </div>
-                </div> -->
             </div>
             <!--  -->
             <br>
@@ -231,7 +172,7 @@
                     <div class="uk-modal-dialog uk-modal-body">
                         <h2 class="uk-modal-title">Отзыв</h2>
                         <div class="uk-flex">
-                            <img src="{{user.userImage.url}}" alt="" class="uk-border-rounded" width="50" height="80"
+                            <img src="{{user.userImage}}" alt="" class="uk-border-rounded" width="50" height="80"
                                 alt="">
                             <div class="uk-flex-column uk-margin-left">
                                 <p class="uk-margin-remove">{{ user.first_name }}</p>
@@ -291,7 +232,7 @@
                                 <div class="uk-grid-medium uk-flex-middle" uk-grid>
                                     <div class="uk-width-auto">
 
-                                        <img class="uk-comment-avatar" src="{{message.image_user.url}}" width="80"
+                                        <img class="uk-comment-avatar" src="{{message.image_user}}" width="80"
                                             height="80" alt="">
                                     </div>
                                     <div class="uk-width-expand">
@@ -441,6 +382,7 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 <script>
+    window.onload = document.getElementById('amount').innerHTML = "{{product.amount}}".split(',')[0];
     var alertPlaceholder = document.getElementById('liveAlertPlaceholder')
     var alertTrigger = document.getElementById('liveAlertBtn')
 
@@ -463,9 +405,11 @@
 
     sizeBtn.forEach(el => el.addEventListener('click', event => {
         let prices = "{{product.price}}".split(',')
+        let amount = "{{product.amount}}".split(',')
         let index = BtnList.indexOf(el)
         document.getElementById('price').innerHTML = prices[index]
-        console.log(prices[index])
+        document.getElementById('amount').innerHTML = amount[index]
+        console.log(amount)
     }));
 </script>
 
