--- a/bizopt/BO/templates/menusTemplates/largeTemplate.html
+++ b/bizopt/BO/templates/menusTemplates/largeTemplate.html
@@ -137,25 +137,19 @@
     <div class="uk-offcanvas-bar">
         <ul class="uk-nav uk-nav-default">
             <li class="uk-active">
-                <a href="/creators/goods/category/Дизайнерская одежда" class="uk-button uk-button-text">Дизайнерская одежда</a>
+                <a href="/creators/goods/category/Одежда" class="uk-button uk-button-text">Одежда </a>
             </li>
             <li class="uk-active">
-                <a href="/creators/goods/category/Дизайнерская обувь" class="uk-button uk-button-text">Дизайнерская обувь</a>
+                <a href="/creators/goods/category/Обувь" class="uk-button uk-button-text">Обувь</a>
             </li>
             <li class="uk-active">
                 <a href="/creators/goods/category/Сумки" class="uk-button uk-button-text">Сумки</a>
             </li>
             <li class="uk-active">
-                <a href="/creators/goods/category/Интерьер" class="uk-button uk-button-text">Интерьер</a>
+                <a href="/creators/goods/category/Украшения" class="uk-button uk-button-text">Интерьер</a>
             </li>
             <li class="uk-active">
-                <a href="/creators/goods/category/Украшения" class="uk-button uk-button-text">Украшения</a>
-            </li>
-            <li class="uk-active">
-                <a href="/creators/goods/category/Скульптуры" class="uk-button uk-button-text">Скульптуры</a>
-            </li>
-            <li class="uk-active">
-                <a href="/creators/goods/category/Подушки" class="uk-button uk-button-text">Подушки</a>
+                <a href="/creators/goods/category/Интерьер" class="uk-button uk-button-text">Украшения</a>
             </li>
         </ul>
     </div>
