--- a/bizopt/BO/templates/showPartner.html
+++ b/bizopt/BO/templates/showPartner.html
@@ -40,7 +40,7 @@
     }
 </style>
 
-<body style="margin: auto">
+<body style="margin: auto" onload="showNotification('{{user.is_inwaiting}}')">
     <section style="padding: 0 10px" clss="uk-card-body" id="header">
         <nav uk-sticky="start: 200; animation: uk-animation-slide-top; sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky; cls-inactive: uk-navbar-transparent uk-dark"
             class="uk-navbar-container" uk-navbar style="color: black; padding: 0 5%;">
@@ -71,7 +71,8 @@
                     <div class="uk-card-header" style="border:none;">
                         <div class="uk-grid-small uk-flex-middle" uk-grid>
                             <div class="uk-width-expand">
-                                <h3 class="uk-card-title uk-text-center uk-text-bold uk-text-break">Добро пожаловать в партнерскую программу BeFreela</h3>
+                                <h3 class="uk-card-title uk-text-center uk-text-bold uk-text-break">Добро пожаловать в
+                                    партнерскую программу BeFreela</h3>
                             </div>
                         </div>
                     </div>
@@ -82,52 +83,58 @@
                             <!-- <a href="https://befreela.partners.ru/" class="uk-width-1 uk-button uk-button-secondary uk-border-rounded" style="margin: 0 auto; font-size: large;background-color: purple">Зарегестрироваться</a> -->
                             <div class="uk-card-body" style="padding-bottom: 0px; padding-top: 2%; text-align: center">
                                 <label for="phonenumber" class="uk-text-muted">Контактный телефон</label>
-                        <div class="uk-inline uk-width-1">
-                            <select class="uk-select uk-width-1-6@s" id="phoneCode"
-                                style="padding: 0 0 0 4%; background-image: none;" onchange="validateCountry(this)">
-                                <option value="+7">+7</option>
-                                <option value="+375">+375</option>
-                                <option value="+996">+996</option>
-                                <option value="+374">+374</option>
-                            </select>
+                                <div class="uk-inline uk-width-1">
+                                    <select class="uk-select uk-width-1-6@s" id="phoneCode"
+                                        style="padding: 0 0 0 4%; background-image: none;"
+                                        onchange="validateCountry(this)">
+                                        <option value="+7">+7</option>
+                                        <option value="+375">+375</option>
+                                        <option value="+996">+996</option>
+                                        <option value="+374">+374</option>
+                                    </select>
 
-                            <input class="uk-input uk-border-rounded uk-width-3-5@s" id="phoneNumber"
-                                name="phonenumber" type="text" placeholder="(000) 000 00 00">
+                                    <input class="uk-input uk-border-rounded uk-width-3-5@s" id="phoneNumber"
+                                        name="phonenumber" type="text" placeholder="(000) 000 00 00">
 
-                                <select class="uk-select uk-width-1-6@s" id="Country"
-                                style="padding: 0 0 0 5%; background-image: none;" onchange="validatePhoneCode(this)">
-                                <option value="Россия" default>🇷🇺</option>
-                                <option value="Казахстан">🇰🇿</option>
-                                <option value="Беларусь">🇧🇾</option>
-                                <option value="Киргизия">🇰🇬</option>
-                                <option value="Армения">🇦🇲</option>
-                            </select>
-                        </div>
-                        <div class="uk-flex uk-flex-center uk-align-center" style="margin-top: 20px">
-                            <button type="submit" onclick="JSalert()" class="uk-button uk-button-primary uk-width-4-5 uk-border-rounded" id="registerBtn"
-                            disabled>Отправить заявку</button>
-                        </div>
-                    </div>
-
-                </form>
-
-                    </div>
-
-                        <div id="modal-close-outside" uk-modal>
-                            <div class="uk-modal-dialog uk-modal-body">
-                                <button class="uk-modal-close-outside" type="button" uk-close></button>
-                                <h2 class="uk-modal-title">Подтверждение</h2>
-                                <form method="POST" action="">
-                                    <p>На ваш номер телефона был отправлен шестизначный код,<br> введите его в поле ниже</p>
-                                    <input maxlength="6" class="uk-input uk-border-rounded" id="codePhone" style="width: 50%;"
-                                           name="code" type="text" placeholder="000000" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" >
-                                    {% csrf_token %}
-                                    <p class="">
-                                        <button type='button'  id="codeButton" class="uk-button uk-button-primary uk-border-rounded" disabled >Отправить код</button>
-                                    </p>
-                                </form>
+                                    <select class="uk-select uk-width-1-6@s" id="Country"
+                                        style="padding: 0 0 0 5%; background-image: none;"
+                                        onchange="validatePhoneCode(this)">
+                                        <option value="Россия" default>🇷🇺</option>
+                                        <option value="Казахстан">🇰🇿</option>
+                                        <option value="Беларусь">🇧🇾</option>
+                                        <option value="Киргизия">🇰🇬</option>
+                                        <option value="Армения">🇦🇲</option>
+                                    </select>
+                                </div>
+                                <div class="uk-flex uk-flex-center uk-align-center" style="margin-top: 20px">
+                                    <button type="submit" onclick="showNotification(true)"
+                                        class="uk-button uk-button-primary uk-width-4-5 uk-border-rounded"
+                                        id="registerBtn" disabled>Отправить заявку</button>
+                                </div>
                             </div>
+
+                        </form>
+
+                    </div>
+
+                    <div id="modal-close-outside" uk-modal>
+                        <div class="uk-modal-dialog uk-modal-body">
+                            <button class="uk-modal-close-outside" type="button" uk-close></button>
+                            <h2 class="uk-modal-title">Подтверждение</h2>
+                            <form method="POST" action="">
+                                <p>На ваш номер телефона был отправлен шестизначный код,<br> введите его в поле ниже</p>
+                                <input maxlength="6" class="uk-input uk-border-rounded" id="codePhone"
+                                    style="width: 50%;" name="code" type="text" placeholder="000000"
+                                    onkeyup="this.value = this.value.replace(/[^\d]/g,'');">
+                                {% csrf_token %}
+                                <p class="">
+                                    <button type='button' id="codeButton"
+                                        class="uk-button uk-button-primary uk-border-rounded" disabled>Отправить
+                                        код</button>
+                                </p>
+                            </form>
                         </div>
+                    </div>
                 </div>
             </div>
 
@@ -222,7 +229,8 @@
                         <div class="uk-card uk-card-default"
                             style="box-shadow: none; margin: 5px; border-radius: 5px; background-color: aliceblue;">
                             <div class="uk-card-media-top uk-text-center" style="padding-top: 10%;">
-                                <img class="uk-border-circle" style="height: 150px; width: 150px;border: 3px solid gray;"
+                                <img class="uk-border-circle"
+                                    style="height: 150px; width: 150px;border: 3px solid gray;"
                                     src="../../media/projectCreatorsImages/яна.png">
                             </div>
                             <div class="uk-card-body" style="padding-top: 10px;">
@@ -235,12 +243,13 @@
                             </div>
                         </div>
                     </div>
-    
+
                     <div class="card-holder uk-width-1-4 uk-text-center">
                         <div class="uk-card uk-card-default"
                             style="box-shadow: none; margin: 5px; border-radius: 5px; background-color: aliceblue;">
                             <div class="uk-card-media-top uk-text-center" style="padding-top: 10%;">
-                                <img class="uk-border-circle" style="height: 150px; width: 150px;border: 3px solid gray;"
+                                <img class="uk-border-circle"
+                                    style="height: 150px; width: 150px;border: 3px solid gray;"
                                     src="../../media/projectCreatorsImages/ваня.png">
                             </div>
                             <div class="uk-card-body" style="padding-top: 10px;">
@@ -251,12 +260,13 @@
                             </div>
                         </div>
                     </div>
-    
+
                     <div class="card-holder uk-width-1-4 uk-text-center">
                         <div class="uk-card uk-card-default"
                             style="box-shadow: none; margin: 5px; border-radius: 5px; background-color: aliceblue;">
                             <div class="uk-card-media-top uk-text-center" style="padding-top: 10%;">
-                                <img class="uk-border-circle" style="height: 150px; width: 150px;border: 3px solid gray;"
+                                <img class="uk-border-circle"
+                                    style="height: 150px; width: 150px;border: 3px solid gray;"
                                     src="../../media/projectCreatorsImages/женя.png">
                             </div>
                             <div class="uk-card-body" style="padding-top: 10px;">
@@ -277,7 +287,8 @@
                         <div class="uk-card uk-card-default"
                             style="box-shadow: none; margin: 5px; border-radius: 5px; background-color: #f0f8ff;">
                             <div class="uk-card-media-top uk-text-center" style="padding-top: 10%;">
-                                <img class="uk-border-circle" style="height: 150px; width: 150px;border: 3px solid gray;"
+                                <img class="uk-border-circle"
+                                    style="height: 150px; width: 150px;border: 3px solid gray;"
                                     src="../../media/projectCreatorsImages/митя.png">
                             </div>
                             <div class="uk-card-body" style="padding-top: 10px;">
@@ -288,12 +299,13 @@
                             </div>
                         </div>
                     </div>
-    
+
                     <div class="card-holder uk-width-1-4 uk-text-center">
                         <div class="uk-card uk-card-default"
                             style="box-shadow: none; margin: 5px; border-radius: 5px; background-color: #f0f8ff;">
                             <div class="uk-card-media-top uk-text-center" style="padding-top: 10%;">
-                                <img class="uk-border-circle" style="height: 150px; width: 150px;border: 3px solid gray;"
+                                <img class="uk-border-circle"
+                                    style="height: 150px; width: 150px;border: 3px solid gray;"
                                     src="../../media/projectCreatorsImages/эмилия.png">
                             </div>
                             <div class="uk-card-body" style="padding-top: 10px;">
@@ -305,12 +317,13 @@
                             </div>
                         </div>
                     </div>
-    
+
                     <div class="card-holder uk-width-1-4 uk-text-center">
                         <div class="uk-card uk-card-default"
                             style="box-shadow: none; margin: 5px; border-radius: 5px; background-color: #f0f8ff;">
                             <div class="uk-card-media-top uk-text-center" style="padding-top: 10%;">
-                                <img class="uk-border-circle" style="height: 150px; width: 150px;border: 3px solid gray;"
+                                <img class="uk-border-circle"
+                                    style="height: 150px; width: 150px;border: 3px solid gray;"
                                     src="../../media/projectCreatorsImages/даша.png">
                             </div>
                             <div class="uk-card-body" style="padding-top: 10px;">
@@ -340,7 +353,8 @@
                                 d="M26.05 44.925V50H5.7V44.925H12.9V25.075C12.9 24.6417 12.9083 24.2 12.925 23.75C12.9417 23.3 12.9667 22.8417 13 22.375L8.25 26.325C7.91667 26.575 7.59167 26.7333 7.275 26.8C6.95833 26.8667 6.65833 26.875 6.375 26.825C6.09167 26.7583 5.84167 26.6583 5.625 26.525C5.40833 26.375 5.24167 26.225 5.125 26.075L2.95 23.15L14.1 13.7H19.775V44.925H26.05Z"
                                 fill="#3A0078"></path>
                         </svg>
-                        <p class="uk-text-break uk-display-inline-block uk-text-large">Регистрация в налоговых органах</p>
+                        <p class="uk-text-break uk-display-inline-block uk-text-large">Регистрация в налоговых органах
+                        </p>
                     </div>
                 </div>
 
@@ -354,7 +368,8 @@
                                 d="M24.475 48.675C25.225 48.675 25.8083 48.8833 26.225 49.3C26.6583 49.7167 26.875 50.2667 26.875 50.95V55H1.725V52.75C1.725 52.3167 1.81667 51.85 2 51.35C2.18333 50.8333 2.49167 50.3667 2.925 49.95L13.675 39.175C14.5917 38.2583 15.4 37.3833 16.1 36.55C16.8 35.7 17.3833 34.875 17.85 34.075C18.3167 33.2583 18.6667 32.4333 18.9 31.6C19.1333 30.7667 19.25 29.8917 19.25 28.975C19.25 27.3583 18.8333 26.1333 18 25.3C17.1667 24.45 15.9917 24.025 14.475 24.025C13.8083 24.025 13.1917 24.125 12.625 24.325C12.075 24.5083 11.575 24.7667 11.125 25.1C10.6917 25.4333 10.3167 25.825 10 26.275C9.68333 26.725 9.45 27.2167 9.3 27.75C9 28.5833 8.59167 29.1417 8.075 29.425C7.575 29.6917 6.85833 29.75 5.925 29.6L2.275 28.95C2.54167 27.1833 3.04167 25.6333 3.775 24.3C4.50833 22.9667 5.425 21.8583 6.525 20.975C7.625 20.0917 8.88333 19.4333 10.3 19C11.7167 18.55 13.2417 18.325 14.875 18.325C16.5917 18.325 18.15 18.5833 19.55 19.1C20.9667 19.6 22.175 20.3083 23.175 21.225C24.175 22.125 24.95 23.2167 25.5 24.5C26.05 25.7833 26.325 27.2 26.325 28.75C26.325 30.0833 26.1333 31.3167 25.75 32.45C25.3667 33.5833 24.8417 34.6667 24.175 35.7C23.525 36.7167 22.7667 37.7083 21.9 38.675C21.0333 39.6417 20.1167 40.6167 19.15 41.6L11.45 49.475C12.3 49.225 13.1417 49.0333 13.975 48.9C14.8083 48.75 15.5917 48.675 16.325 48.675H24.475Z"
                                 fill="#3A0078"></path>
                         </svg>
-                        <p class="uk-text-break uk-display-inline-block uk-text-large">Обязуетесь соблюдать партнерские соглашения</p>
+                        <p class="uk-text-break uk-display-inline-block uk-text-large">Обязуетесь соблюдать партнерские
+                            соглашения</p>
                     </div>
                 </div>
 
@@ -380,12 +395,13 @@
                                 d="M36.6 37.15V26.35C36.6 25.7833 36.6167 25.1833 36.65 24.55C36.7 23.9 36.7667 23.225 36.85 22.525L26.35 37.15H36.6ZM46.8 37.15V41.05C46.8 41.4167 46.675 41.7333 46.425 42C46.1917 42.25 45.8583 42.375 45.425 42.375H42.6V51H36.6V42.375H21.625C21.1917 42.375 20.7917 42.2417 20.425 41.975C20.075 41.7083 19.8583 41.3583 19.775 40.925L19.05 37.475L36.05 14.7H42.6V37.15H46.8Z"
                                 fill="#3A0078"></path>
                         </svg>
-                        <p class="uk-text-break uk-display-inline-block uk-text-large">Настрой на большие и успешные продажи</p>
+                        <p class="uk-text-break uk-display-inline-block uk-text-large">Настрой на большие и успешные
+                            продажи</p>
                     </div>
                 </div>
                 <div>
+                </div>
             </div>
-        </div>
         </div>
     </section>
 
@@ -394,12 +410,12 @@
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.13.7/dist/js/uikit.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.13.7/dist/js/uikit-icons.min.js"></script>
-<script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
 
 <script>
-    $(function() {
-        $("#codePhone").on("keyup", function() {
-            if($("#codePhone").val().length === 6) {
+    $(function () {
+        $("#codePhone").on("keyup", function () {
+            if ($("#codePhone").val().length === 6) {
                 $("#codeButton").prop("disabled", false);
             } else {
                 $("#codeButton").prop("disabled", true);
@@ -503,22 +519,24 @@
     };
 
 
+    function showNotification(el) {
+        console.log(el)
+        if (el) {
+            Swal.fire(
+                'Ваша заявки принята',
+                'Наш сотрудник свяжется с вами в ближайшее время',
+                'success'
+            )
+            document.getElementsByClassName('swal2-confirm')[0].addEventListener('click', function () {
+                window.location.replace('/')
+            });
+        }
+    }
+
 
     const inputElement = document.getElementById('phoneNumber');
     inputElement.addEventListener('keydown', enforceFormat);
     inputElement.addEventListener('keyup', formatToPhone);
-
-    function JSalert(){
-        Swal.fire(
-            'Ваша заявки принята',
-            'Наш сотрудник свяжется с вами в ближайшее время',
-            'success'
-        )
-        document.getElementsByClassName('swal2-confirm')[0].addEventListener('click',  function(){
-            window.location.replace('/')
-        });
-    }
-
 </script>
 
 </html>
