--- a/bizopt/BO/templates/goods.html
+++ b/bizopt/BO/templates/goods.html
@@ -32,9 +32,9 @@
                     <a class="uk-button uk-button-link uk-text-right" uk-filter-control="group: sex">неважно</a></li>
                 <li class="uk-width-1 uk-text-right" uk-filter-control="filter: [data-sex='унисекс']; group: sex">
                     <a class="uk-button uk-button-link uk-text-right">унисекс</a></li>
-                <li class="uk-width-1 uk-text-right" uk-filter-control="filter: [data-sex='мужское']; group: sex">
+                <li class="uk-width-1 uk-text-right" uk-filter-control="filter: [data-sex='мужской']; group: sex">
                     <a class="uk-button uk-button-link uk-text-right">мужское</a></li>
-                <li class="uk-width-1 uk-text-right" uk-filter-control="filter: [data-sex='женское']; group: sex">
+                <li class="uk-width-1 uk-text-right" uk-filter-control="filter: [data-sex='женский']; group: sex">
                     <a class="uk-button uk-button-link uk-text-right">женское</a></li>
                 <li class="uk-divider"></li>
             </ul>
