--- a/bizopt/BO/templates/cardProduct.html
+++ b/bizopt/BO/templates/cardProduct.html
@@ -99,8 +99,7 @@
 
                                 {% csrf_token %}
                                 <button class="uk-button uk-button-primary" name="buy_product" type="submit"
-                                    onclick="UIkit.notification({message: 'Запрос отправлен', status: 'success'})">Перейти
-                                    к оплате</button>
+                                    onclick="UIkit.notification({message: 'Запрос отправлен', status: 'success'})">Заказать товар</button>
                             </div>
                         </form>
 
