--- a/bizopt/BO/templates/menusTemplates/largeTemplate.html
+++ b/bizopt/BO/templates/menusTemplates/largeTemplate.html
@@ -23,20 +23,17 @@
         <div class="uk-navbar-left uk-width-3-5">
             <ul class="uk-navbar-nav">
 
-                <li class="uk-active" style="margin: 0 5%">
-                    <a href="/">
-                        <h1 class="uk-margin-remove uk-text-uppercase" style="font-size: 40px;">BeFreela</h1>
+                <li class="uk-active uk-width-2-5 uk-margin-small-left uk-margin-small-top">
+                    <a href="/" class="uk-width-expand uk-padding-remove uk-flex uk-flex-middle">
+                        <img src="../../../media/logoImage/logo.svg" alt="" class="uk-width-1-5" height="100">
+                        <img src="../../../media/logoImage/logo_text.svg" alt="" class="uk-width-4-5" height="100">
                     </a>
                 </li>
 
-                <li class="uk-active uk-margin-left">
+                <li class="uk-active uk-margin-left uk-flex uk-flex-middle uk-width-1-4">
                     <a href="/creators/resumes/" style="font-size: 25px; text-transform: none;">Бренды</a>
-                </li>
-                <li class="uk-flex uk-flex-middle">
                     <div class="uk-divider-vertical uk-margin-remove"
                         style="height: 50%; background-color: black; width: 2px"></div>
-                </li>
-                <li class="uk-active">
                     <a href="/creators/goods/" style="font-size: 25px; text-transform: none;">Магазин</a>
                 </li>
             </ul>
@@ -97,8 +94,9 @@
         <ul class="uk-navbar-nav">
 
             <li class="uk-active" style="margin: 0 5%">
-                <a href="#">
-                    <h1 class="uk-margin-remove uk-text-uppercase" style="font-size: 40px;">BeFreela</h1>
+                <a href="/" class="uk-width-expand uk-padding-remove uk-flex uk-flex-middle">
+                    <img src="../../../media/logoImage/logo.svg" alt="" class="uk-width-1-5" height="100">
+                    <img src="../../../media/logoImage/logo_text.svg" alt="" class="uk-width-4-5" height="100">
                 </a>
             </li>
 
